--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -1,9 +1,14 @@
 .landing-page {
-  background-color: #e7dbdb;
-  padding: 0 26px; 
+
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+
+  height: calc(100vh - 100px);
+  padding: 0 26px; 
+  box-sizing: border-box;
+
+  background-color: #e7dbdb;
 }
 
 .nav {
